# myazo

./: .editorconfig  .gitignore  Dockerfile  LICENSE.md  README.md  docker-compose.yml  myazo.py
.github/: dependabot.yml
client/: config.ini.example  myazo.py  pyproject.toml  requirements.txt
client/src/: myazo.py  requirements.txt
server/: Dockerfile  config.php.example  docker-compose.yml  upload.php
server/src/: config.php.example  upload.php
web/: upload.php
