[tool.poetry]
name = "myazo"
version = "0.8.1"
description = "Self-hosted, cross-platform Gyazo alternative"
authors = ["Miguel de Moura"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.26.0"
pyperclip = "^1.8.2"
pillow = "^8.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
