[tool.poetry]
name = "myazo"
version = "0.8.3"
description = "Self-hosted, cross-platform Gyazo alternative"
authors = ["Miguel de Moura"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
pyperclip = "^1.8.2"
pillow = "^10.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
